--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 <body>
     <div id="container">
         <div id="title">
-           Magic 8 Ball 
-        </div>
-        <div id="question">
-            <input type="text" placeholder="Type your question here">
-        </div>
+           <h2>Magic 8 Ball</h2>
+           <h5>Type your question below:</h5>
+            <textarea id="text" rows="4" cols="50"></textarea>
         <div id="shake">
             <button type="button">SHAKE</button>
         </div>
         <div id="magicball">
-            
+            <p id="answer">Answer</p>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
